not in working state. Migrate more to backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,29 +10,26 @@
     <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
 
     <!-- Global Constants and Variables -->
-    <script defer src="script/globals.js"></script>
-
-    <!-- Config -->
-    <script defer src="script/config.js"></script>
+    <script defer src="scripts/globals.js"></script>
 
     <!-- Classes -->
-    <script defer src="script/classes/statTracker.js"></script>
-    <script defer src="script/classes/baseClasses/particle.js"></script>
-    <script defer src="script/classes/baseClasses/building.js"></script>
-    <script defer src="script/classes/buildings/office.js"></script>
-    <script defer src="script/classes/person.js"></script>
-    <script defer src="script/classes/camera.js"></script>
+    <script defer src="scripts/classes/statTracker.js"></script>
+    <script defer src="scripts/classes/baseClasses/particle.js"></script>
+    <script defer src="scripts/classes/baseClasses/building.js"></script>
+    <script defer src="scripts/classes/buildings/office.js"></script>
+    <script defer src="scripts/classes/person.js"></script>
+    <script defer src="scripts/classes/camera.js"></script>
     <!-- ... -->
 
     <!-- Frame Queue -->
-    <script defer src="script/frame.js"></script>
+    <script defer src="scripts/frame.js"></script>
 
     <!-- Main -->
-    <script defer src="script/main.js"></script>
+    <script defer src="scripts/main.js"></script>
 </head>
 
 <body>
-    <div id="ups-fps-dps">ups/fps/dps(<span id="ups">-</span>/<span id="fps">-</span>/<span id="dps">-</span>)</div>
+    <!-- <div id="ups-fps-dps">ups/fps/dps(<span id="ups">-</span>/<span id="fps">-</span>/<span id="dps">-</span>)</div> -->
     <canvas id="main-display"></canvas>
 </body>
 
